# ResearchML

./: .gitignore  CMakeLists.txt  build.sh  first_build.sh  generate_header.cpp  gpucompute.cpp  gpucompute.hpp  tftest.cpp
cmake/: FindSSE.cmake  SetCompilerFlags.cmake  gtest.cmake  json.cmake  tensorflow-cmake.cmake  tensorflow.cmake
src/ComputeEngine/: CMakeLists.txt  ComputeEngine.cpp  ComputeEngine.hpp  matrix.cpp  matrix.hpp
src/DataLoader/: CMakeLists.txt  DataLoader.hpp  preprocess.cpp  preprocess.hpp
src/DataLoader/Preprocess/: preprocess.cpp  preprocess.hpp
src/DataLoader/utils/: utils.cpp  utils.hpp
src/Optimizer/: CMakeLists.txt  Opimizer.hpp
src/Optimizer/Loss/: loss.cpp  loss.hpp
src/Optimizer/utils/: utils.cpp  utils.hpp
src/algorithms/: CMakeLists.txt  abstract_algorithm.cpp  abstract_algorithm.hpp
src/algorithms/dictionary/: dictionary_algorithm.hpp
src/algorithms/reconstruction/: reconstruction_algorithm.hpp
src/algorithms/representation/: representation_algorithm.hpp
src/algorithms/supervised/: CMakeLists.txt  supervised_algorithm.cpp  supervised_algorithm.hpp
src/algorithms/timeseries/: CMakeLists.txt  timeseries_algorithm.cpp  timeseries_algorithm.hpp
src/algorithms/unsupervised/: CMakeLists.txt  unsupervised_algorithm.cpp  unsupervised_algorithm.hpp
src/analysis/: CMakeLists.txt  ClassificationAnalysis.cpp  ConfusionMatrix.cpp  RegressionAnalysis.cpp  analysis.hpp
src/experiment/: CMakeLists.txt  experiment.cpp  experiment.hpp
src/transformations/: CMakeLists.txt  kernel.cpp  kernel.hpp
src/util/: CMakeLists.txt  cdash.cpp  cdash.hpp  json.cpp  json.hpp
src/util/Files/: files.cpp  files.hpp
src/util/Logger/: Logger.cpp  Logger.hpp  pack.cpp  pack.hpp
src/util/Random/: rand.cpp  rand.hpp
tests/: unit_tests.cpp
tests/unit/: unit_tests.hpp
tests/unit/ComputeEngine/: ComputeEngine.hpp  matrix.hpp
tests/unit/DataLoader/: preprocess.hpp
tests/unit/Optimizer/: Loss.hpp  utils.hpp
tests/unit/experiment/: experiment.hpp
tests/unit/utils/: cdash.hpp  json.hpp
